--- a/core/package.json
+++ b/core/package.json
@@ -18,6 +18,7 @@
     "fs": "0.0.1-security",
     "libsodium-wrappers": "^0.7.3",
     "moment": "^2.22.2",
+    "mysql": ">=2.16.0",
     "node-json-db": "^0.7.5",
     "node-opus": "^0.2.9",
     "opusscript": "0.0.6",
